--- a/_data/data.yml
+++ b/_data/data.yml
@@ -3,31 +3,30 @@
 #
 
 sidebar:
-    about: True # set to False or comment line if you want to remove the "how to use?" in the sidebar
+    about: False # set to False or comment line if you want to remove the "how to use?" in the sidebar
     education: True # set to False if you want education in main section instead of in sidebar
 
     # Profile information
-    name: Alan Doe
-    tagline: Full Stack Developer
+    name: Geoff Quinby
+    tagline: Software Engineer
     avatar: profile.png  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
 
     # Sidebar links
-    email: hello@webjeda.com
-    phone: 012 345 6789
-    timezone: America/Cancun Timezone
-    citizenship:
-    website: blog.webjeda.com #do not add http://
-    linkedin: alandoe
-    xing: alandoe
-    github: sharu725
+    email: gequinby@gmail.com
+#    phone: 012 345 6789
+    timezone: America/New York
+    citizenship: USC
+#    website: blog.webjeda.com #do not add http://
+    linkedin: geoff-quinby
+    github: geoff-quinby
     telegram: # add your nickname without '@' sign
-    gitlab:
-    bitbucket:
-    twitter: '@webjeda'
-    stack-overflow: # Number/Username, e.g. 123456/alandoe
-    codewars:
-    goodreads: # Number-Username, e.g. 123456-alandoe
-    pdf: http://www.africau.edu/images/default/sample.pdf
+#    gitlab:
+#    bitbucket:
+#    twitter:
+#    stack-overflow: # Number/Username, e.g. 123456/alandoe
+#    codewars:
+#    goodreads: # Number-Username, e.g. 123456-alandoe
+#    pdf: http://www.africau.edu/images/default/sample.pdf
 
     languages:
       title: Languages
@@ -35,19 +34,19 @@ sidebar:
         - idiom: English
           level: Native
 
-        - idiom: French
-          level: Professional
-
         - idiom: Spanish
-          level: Professional
+          level: Novice
+
+        - idiom: German
+          level: Novice
 
     interests:
       title: Interests
       info:
-        - item: Climbing
+        - item: Video Games
           link:
 
-        - item: Snowboarding
+        - item: Roller Derby
           link:
 
         - item: Cooking
@@ -56,77 +55,107 @@ sidebar:
 career-profile:
     title: Career Profile
     summary: |
-      Summarise your career here lorem ipsum dolor sit amet, consectetuer
-      adipiscing elit. You can [download this free resume/CV template here]().
-      Aenean commodo ligula eget dolor aenean massa. Cum sociis natoque
-      penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-      Donec quam felis, ultricies nec, pellentesque eu.
-      Second paragraph if required.
+      Skilled polyglot software developer with 10+ years professional experience seeking a modern 
+      working environment where innovation, unique problem solving skills, and high quality 
+      standards are critical to effective and robust application development. Experienced with front-end, 
+      back-end and full-stack tech, APIs, micro-service and SaaS architecture, I seek the opportunity
+      to flex my creative muscle in a contemporary, high-spirited workplace.
+
 education:
     title: Education
     info:
-      - degree: MSc in Computer Science
-        university: University of London
-        time: 2011 - 2012
-        details: |
-          Describe your study here lorem ipsum dolor sit amet, consectetuer
-          adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum
-          sociis natoque penatibus et magnis dis parturient montes, nascetur
-          ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu,
-          pretium quis, sem.
-            - Bullet point
-            - Bullet point
-      - degree: BSc in Applied Mathematics
-        university: Bristol University
-        time: 2007 - 2011
-        details: |
-          Describe your study here lorem ipsum dolor sit amet, consectetuer
-          adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum
-          sociis natoque penatibus et magnis dis parturient montes, nascetur
-          ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu,
-          pretium quis, sem.
-            - Bullet point
-            - Bullet point
+      - degree: BS Digital Media - Interactive Systems
+        university: University of Central Florida
+        time: Graduated 2011
+        details: Computer Science Minor
+
+skills:
+  title: Skills &amp; Proficiency
+
+  toolset:
+    - name: Python & Django
+      level: 98%
+
+    - name: Javascript & jQuery
+      level: 98%
+
+    - name: Angular
+      level: 98%
+
+    - name: HTML5 & CSS
+      level: 95%
+
+    - name: Ruby on Rails
+      level: 85%
+
+    - name: Sketch & Photoshop
+      level: 60%
+
 experiences:
-    title: Experiences
+    title: Professional Highlights
     info:
-      - role: Lead Developer
-        time: 2015 - Present
-        company: Startup Hubs, San Francisco
-        details: |
-          Describe your role here lorem ipsum dolor sit amet, consectetuer
-          adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-          Cum sociis natoque penatibus et magnis dis parturient montes,
-          nascetur ridiculus mus. Donec quam felis, ultricies nec,
-          pellentesque eu, pretium quis, sem. Nulla consequat massa quis
-          enim. Donec pede justo. Sed ut perspiciatis unde omnis iste natus
-          error sit voluptatem accusantium doloremque laudantium, totam rem
-          aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
-          architecto beatae vitae dicta sunt explicabo.
-            - Bullet point
-            - Bullet point
       - role: Senior Software Engineer
-        time: 2014 - 2015
-        company: Google, London
+        time: Mar 2022 - Nov 2022
+        company: SkySpecs, Ann Arbor MI
         details: |
-          Describe your role here lorem ipsum dolor sit amet, consectetuer
-          adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-          Cum sociis natoque penatibus et magnis dis parturient montes,
-          nascetur ridiculus mus. Donec quam felis, ultricies nec,
-          pellentesque eu, pretium quis, sem.
-            - Bullet point
-            - Bullet point
-      - role: UI Developer
-        time: 2012 - 2014
-        company: Amazon, London
+          Key Contributor to cutting edge Wind & Solar farm Asset Management software. Designed & developed
+          solutions for Federated Apollo GraphQL microservice infrastructure. Full-stack SDLC with work in 
+          React, Node, and Terraform. Developed, configured, and launched company-first Kafka & Confluent Eventing system.
+            - Primary Stack: **Node, Express, Apollo, Postgres, React, AWS, Confluent**
+            - FTE, Remote
+      - role: Software Engineer
+        time: Feb 2021 - Mar 2022
+        company: SOMA Global, Tampa FL
         details: |
-          Describe your role here lorem ipsum dolor sit amet, consectetuer
-          adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-          Cum sociis natoque penatibus et magnis dis parturient montes,
-          nascetur ridiculus mus. Donec quam felis, ultricies nec,
-          pellentesque eu, pretium quis, sem.
-            - Bullet point
-            - Bullet point
+          Developed and maintained industry-leading “Public Safety as a Service” platform, making Computer Aided Dispatch, 
+          Records Management, and Personnel administration available in the Cloud via AWS. Developed cutting-edge 
+          solutions in multiple ecosystems, leveraging RESTful API services, Websocket notifications, 
+          and robust pub/sub messaging systems. Mentored Junior developers and played a key role in developing 
+          coding standards and engineering education, as well as streamlining development and review procedures.
+            - Primary Stack: **Golang, Python, MySQL, MongoDB, React, AngularJS**
+            - FTE, Remote
+      - role: SaaS Engineer
+        time: Mar 2020 - Feb 2021
+        company: Mediagistic, Tampa FL
+        details: |
+          Lead Engineer for greenfield advertising software platform with data-driven campaign management.
+            - Primary Stack: **Python / Django Rest, MySQL, React**
+            - Contract, Partial Remote
+      - role: Full Stack Developer
+        time: Jan 2019 - Feb 2020
+        company: Perch Security, Tampa FL
+        details: |
+          Fast paced, self-managed startup environment. Maintained a large-scale, co-managed threat detection 
+          SaaS platform that parsed terabytes of network traffic and log data to analyze and alert on security threats.
+          Developed customized microservice built for integrating with third party APIs for several key security 
+          partners such as Cisco, ConnectWise, etc. Hosted on AWS Beanstalk with Elasticsearch.
+            - Primary Stack: **Python / Django Rest, Postgres, Elasticsearch / Kibana, React**
+            - FTE, Partial Remote
+      - role: Scientific Developer
+        time: Jan 2018 - Dec 2018
+        company: Moffitt Cancer Center, Tampa FL
+        details: |
+          Developer for Research & IT department, maintaining several clinical & research applications. Maintained
+          critical platform for physicians and administrators to record & aggregate data for cancer research. Spearheaded
+          development for software to automate & facilitate form submission to national database.
+            - Primary Stack: **Python / Django REST, ExtJS, MySQL**
+            - Contract, On-site
+      - role: Developer
+        time: Oct 2016 - Oct 2017
+        company: Florida Virtual School, Orlando FL
+        details: |
+          Revamp defunct reporting & analytics system for customer billing & auditing. Lead developer for 
+          Cloud migration of industry leading LTI compliant courseware provisioning system.
+            - Primary Stack: **Python / Django, PHP, Azure**
+            - Contract, Remote
+      - role: Web Developer / Software Architect
+        time: Sep 2013 - Aug 2016
+        company: BookIt, Orlando FL
+        details: |
+          Developer for Booking & Payments Team of Online Travel Agency & Vacation Package website. Promoted to
+          Software Architect to design & develop brand-new Microservice-oriented system libraries & product roadmaps.
+            - Primary Stack: **PHP / Zend Framework, MySQL, Satis, HTML / CSS
+
 projects:
     title: Projects
     intro: >
@@ -153,69 +182,6 @@ projects:
       - title: Delta
         link: "#"
         tagline: "A responsive Bootstrap one page theme designed to help app developers promote their mobile apps"
-
-oss:
-    title: OSS Contributions
-    intro: >
-      You can list your open source software contributions in this
-      section. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-      Vestibulum et ligula in nunc bibendum fringilla a eu lectus.
-    contributions:
-      - title: Tempo
-        link: "#"
-        tagline: "A responsive website template designed to help startups promote their products or services and to attract users &amp; investors"
-
-      - title: Atom
-        link: "#"
-        tagline: "A comprehensive website template solution for startups/developers to market their mobile apps."
-
-      - title: Delta
-        link: "#"
-        tagline: "A responsive Bootstrap one page theme designed to help app developers promote their mobile apps"
-
-publications:
-    title: Publications
-    intro: |
-      You can list your publications in this section. Lorem ipsum dolor sit
-      amet, consectetur adipiscing elit. Vestibulum et ligula in nunc
-      bibendum fringilla a eu lectus.
-    papers:
-      - title: The Art of Computer Programming
-        link: "#"
-        authors: Donald E. Knuth
-        conference: Addison-Wesley, 1968
-
-      - title: "Genetic Programming III: Darwinian Invention &amp; Problem Solving"
-        link: "#"
-        authors: Koza, J.R., Andre, D., Bennett, F.H., Keane, M.A.
-        conference: "Morgan Kaufmann Publishers Inc., San Francisco, CA, USA, 1st edn. (1999)"
-
-      - title: A syntax directed compiler for Algol 60
-        link: "#"
-        authors: Edgar T. Irons
-        conference: "Comm. ACM 4 (1961), 51–55"
-
-skills:
-    title: Skills &amp; Proficiency
-
-    toolset:
-      - name: Python & Django
-        level: 98%
-
-      - name: Javascript & jQuery
-        level: 98%
-
-      - name: Angular
-        level: 98%
-
-      - name: HTML5 & CSS
-        level: 95%
-
-      - name: Ruby on Rails
-        level: 85%
-
-      - name: Sketch & Photoshop
-        level: 60%
 
 footer: >
     Designed with <i class="fas fa-heart"></i> by <a href="http://themes.3rdwavemedia.com" target="_blank" rel="nofollow">Xiaoying Riley</a>
