--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 #Update all the sections by editing the data.yml file inside _data folder.
 
 # Site Settings
-title: My Resume
-url: 'http://webjeda.com'
+title: Geoff Quinby
+#url: 'http://webjeda.com'
 
 #change it according to your repository name
 # disabling since we are using a custom domain
-#baseurl: '/online-cv' 
+baseurl: '/resume'
 
 description: A beautiful Jekyll theme for creating resume
 # Style will be applied only after restarting the build or serve. Just choose one of the options.
@@ -14,7 +14,7 @@ theme_skin: blue # blue turquoise green berry orange ceramic
 chrome_mobile_color: #use hex colors (ex:#1976d2) or leave empty if you don't want a color for chrome mobile searchbar
 
 # Tracker
-analytics: UA-83979019-1
+#analytics: UA-83979019-1
 
 # Sass/SCSS
 sass:
@@ -24,7 +24,7 @@ sass:
 # Build settings
 compress-site: yes
 
-encoding: "utf-8"
+encoding: UTF-8
 compress_html: # - http://jch.penibelst.de/
   clippings: all
   ignore:
