--- a/_data/data.yml
+++ b/_data/data.yml
@@ -180,4 +180,5 @@ experiences:
 #        tagline: "A responsive Bootstrap one page theme designed to help app developers promote their mobile apps"
 
 footer: >
-    Designed with <i class="fas fa-heart"></i> by <a href="http://themes.3rdwavemedia.com" target="_blank" rel="nofollow">Xiaoying Riley</a>
+    Forked and customized from <a href="https://github.com/sharu725/online-cv" target="_blank" rel="nofollow">Online CV</a>.
+    Designed with <i class="fas fa-heart"></i> by <a href="https://themes.3rdwavemedia.com" target="_blank" rel="nofollow">Xiaoying Riley</a>
