--- a/_data/data.yml
+++ b/_data/data.yml
@@ -13,13 +13,13 @@ sidebar:
 
     # Sidebar links
     email: gequinby@gmail.com
-#    phone: 012 345 6789
-    timezone: Eastern (UTC-05:00)
+    timezone: ET (UTC-05:00)
     citizenship: United States
-#    website: blog.webjeda.com #do not add http://
     linkedin: geoff-quinby
     github: geoff-quinby
     telegram: # add your nickname without '@' sign
+#    phone: 012 345 6789
+#    website: blog.webjeda.com #do not add http://
 #    gitlab:
 #    bitbucket:
 #    twitter:
