Fixing sidebar styling and organization.

--- a/_data/data.yml
+++ b/_data/data.yml
@@ -14,7 +14,7 @@ sidebar:
     # Sidebar links
     email: gequinby@gmail.com
     timezone: ET (UTC-05:00)
-    citizenship: United States
+    citizenship: U.S. Citizen
     linkedin: geoff-quinby
     github: geoff-quinby
     telegram: # add your nickname without '@' sign
