--- a/_data/data.yml
+++ b/_data/data.yml
@@ -17,7 +17,8 @@ sidebar:
     citizenship: U.S. Citizen
     linkedin: geoff-quinby
     github: geoff-quinby
-    telegram: # add your nickname without '@' sign
+    pdf: https://drive.google.com/file/d/1cdYmGG84VMxrBakRYunng2rs2ZNPVtkQ/view?usp=sharing
+#    telegram: # add your nickname without '@' sign
 #    phone: 012 345 6789
 #    website: blog.webjeda.com #do not add http://
 #    gitlab:
@@ -26,7 +27,6 @@ sidebar:
 #    stack-overflow: # Number/Username, e.g. 123456/alandoe
 #    codewars:
 #    goodreads: # Number-Username, e.g. 123456-alandoe
-#    pdf: http://www.africau.edu/images/default/sample.pdf
 
     languages:
       title: Languages
