--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ title: Geoff Quinby
 
 #change it according to your repository name
 # disabling since we are using a custom domain
-baseurl: '/resume'
+baseurl: '/online-cv'
 
 description: Online Resume of Geoffrey E. Quinby
 # Style will be applied only after restarting the build or serve. Just choose one of the options.
