--- a/_data/data.yml
+++ b/_data/data.yml
@@ -8,6 +8,7 @@ sidebar:
 
     # Profile information
     name: Geoff Quinby
+    pronouns: (he/him)
     tagline: Software Engineer
     avatar: profile.png  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
 
